--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,91 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
+@media {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
+  background: linear-gradient(0.35turn, #7b7f85, #0eabd6, #ebf8e1, #7b7f85);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
+  border: 2px solid #0eabd6;
+}
+.App-quest {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  width: 800px;
+  height: 800px;
+  margin: auto;
+  padding: 10px;
+  border: 2px solid #0eabd6;
+}
+
+.App-quwstion {
+  padding: 10px;
+  display: flex;
+  width: 350px;
+  min-height: 100%;
+  border: 2px solid #0eabd6;
+  background: linear-gradient(0.15turn, #3f87a6, #ebf8e1, #f69d3c);
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+.App-answers {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  display: flex;
+  width: 350px;
+  min-height: 100%;
+  border: 2px solid #0eabd6;
+  background: linear-gradient(to top, #fefcea, #f1da36);
 }
 
 .App-link {
-  color: #61dafb;
+  color: red;
+  padding: 5px 15px;
+  border: 2px solid #0eabd6;
+  min-width: 100vh;
+  height: 200px;
+  background: linear-gradient(
+    00.25turn,
+    rgb(52, 139, 252),
+    #eee,
+    rgb(147, 141, 206)
+  );
+  margin: auto;
+  border-radius: 9%;
 }
-
+.button {
+  display: flex;
+  position: relative;
+  margin: auto;
+  border: none;
+  color: rgb(1, 3, 17);
+  width: 170px;
+  height: 30px;
+  padding: 5px 15px;
+  text-align: center;
+  background: linear-gradient(to top, #fefcea, #f1da36);
+}
+p {
+  margin: 0px;
+  text-align: left;
+}
+.p_quest {
+  margin: 0px;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
